--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Жданов Александр — ML Ops / DevOps</title>
-<meta name="description" content="ML Ops / DevOps · Kubernetes · Docker · CI/CD · Monitoring" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 <style>
@@ -17,25 +16,27 @@
   --radius:12px;
   --gap:22px;
 }
-*{box-sizing:border-box}
-html, body {height:100%; margin:0;}
-body{
-  font-family:Inter, system-ui, sans-serif;
-  background:linear-gradient(180deg,var(--bg),#eef4fb);
-  color:var(--accent);
-  -webkit-font-smoothing:antialiased;
-  padding:32px 18px;
+*{box-sizing:border-box;}
+html, body {
+  margin:0;
+  padding:0;
+  width:210mm;
+  height:297mm;
+  font-family: Inter, system-ui, sans-serif;
+  background: var(--bg);
 }
 .paper{
-  max-width:1100px;
-  margin:0 auto;
-  display:grid;
-  grid-template-columns:300px 1fr;
+  display: grid;
+  grid-template-columns: 300px 1fr;
   gap:28px;
-  min-height:100%;
+  padding:20mm;
+  width:170mm; /* 210mm - 2*20mm паддинг */
+  height:257mm; /* 297mm - 2*20mm паддинг */
+  margin:0 auto;
+  background:#ffffff;
+  border-radius:12px;
 }
 .left{
-  position:sticky; top:28px;
   background:var(--card);
   border-radius:var(--radius);
   box-shadow:0 8px 30px rgba(16,24,40,0.06);
@@ -52,29 +53,27 @@ body{
   color:#fff;font-weight:700;font-size:26px;
   margin:0 auto 10px;
 }
-h2{font-size:15px;margin:0 0 10px;color:var(--accent)}
+h2{font-size:15px;margin:0 0 10px;color:var(--accent);}
 .contact-list{
-  font-size:14px;
-  color:var(--muted);
-  line-height:1.6;
-  display:flex;
-  flex-direction:column;
-  gap:4px;
+  font-size:14px;color:var(--muted);line-height:1.6;
+  display:flex;flex-direction:column;gap:4px;
 }
-.contact-list a{color:inherit;text-decoration:none}
-.skills-grid{display:flex;flex-wrap:wrap;gap:8px}
+.contact-list a{color:inherit;text-decoration:none;}
+.skills-grid{display:flex;flex-wrap:wrap;gap:8px;}
 .skill-item{
   background:#f8fbff;border-radius:8px;
   padding:6px 10px;font-size:13px;
   box-shadow:0 6px 18px rgba(16,24,40,0.03);
 }
-.muted{color:var(--muted);font-size:13px}
+.muted{color:var(--muted);font-size:13px;}
 .right{
   background:var(--card);
   border-radius:var(--radius);
   box-shadow:0 10px 40px rgba(16,24,40,0.06);
   padding:24px;
-  min-height:100%;
+  display:flex;
+  flex-direction:column;
+  gap:18px;
 }
 .title-main h1{font-size:28px;margin:0}
 .subtitle{color:var(--muted);font-weight:600;margin-bottom:12px}
@@ -93,13 +92,11 @@ h2{font-size:15px;margin:0 0 10px;color:var(--accent)}
   margin-top:24px;
 }
 @media(max-width:880px){
-  .paper{grid-template-columns:1fr}
-  .left{position:relative}
+  .paper{grid-template-columns:1fr;width:100%;height:auto;}
 }
 @media print {
   body {margin:0;}
-  .paper {min-height:auto;}
-  .footer {position:relative; bottom:0;}
+  .paper {width:100%;height:auto;padding:0;}
 }
 </style>
 </head>
