Refactor CSS styles for layout and appearance

--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
 html, body {
   margin:0;
   padding:0;
-  width:210mm;
-  height:297mm;
   font-family: Inter, system-ui, sans-serif;
   background: var(--bg);
 }
+body {
+  padding: 20px;
+}
 .paper{
-  display: grid;
-  grid-template-columns: 300px 1fr;
+  display:grid;
+  grid-template-columns:300px 1fr;
   gap:28px;
-  padding:20mm;
-  width:170mm; /* 210mm - 2*20mm паддинг */
-  height:257mm; /* 297mm - 2*20mm паддинг */
+  max-width:1100px;
   margin:0 auto;
-  background:#ffffff;
-  border-radius:12px;
+  background: #fff;
+  border-radius: var(--radius);
+  padding: 20px;
+  box-shadow: 0 10px 40px rgba(16,24,40,0.06);
 }
 .left{
   background:var(--card);
   border-radius:var(--radius);
-  box-shadow:0 8px 30px rgba(16,24,40,0.06);
   padding:18px;
   display:flex;
   flex-direction:column;
@@ -69,7 +69,6 @@ h2{font-size:15px;margin:0 0 10px;color:var(--accent);}
 .right{
   background:var(--card);
   border-radius:var(--radius);
-  box-shadow:0 10px 40px rgba(16,24,40,0.06);
   padding:24px;
   display:flex;
   flex-direction:column;
@@ -92,11 +91,12 @@ h2{font-size:15px;margin:0 0 10px;color:var(--accent);}
   margin-top:24px;
 }
 @media(max-width:880px){
-  .paper{grid-template-columns:1fr;width:100%;height:auto;}
+  .paper{grid-template-columns:1fr;}
+  .left{width:100%;}
 }
 @media print {
-  body {margin:0;}
-  .paper {width:100%;height:auto;padding:0;}
+  body {padding:0;}
+  .paper {max-width:100%;box-shadow:none;}
 }
 </style>
 </head>
